--- a/python3/Dockerfile
+++ b/python3/Dockerfile
@@ -1,6 +1,8 @@
 FROM energy/base:1
 
 ENV BINARY=/usr/bin/python3
+ENV TLANG=python3
+
 COPY . .
 RUN apk add python3
 RUN /usr/bin/python3 compile_all.py compile
